center website content and fix bullet point alignment

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,8 @@ p {
 ul {
   font-size: 20px;
   line-height: 30px;
+  display: inline-block;
+  text-align: left;
 }
 img {
   max-width: 100%;
@@ -25,4 +27,11 @@ img {
   border-radius: 8px;
   width: 600px;
   text-align: center;
+}
+
+body {
+  text-align: center;
+  max-width: 800px;
+  margin: 0px auto;
+  padding: 20px;
 }
